Enhance logging configuration and Docker setup for MCP server. Added JSON logging support with Logstash encoder, updated Dockerfile to suppress JVM warnings, and improved README with logging instructions. Removed outdated example configuration files.